# rocm-persistenced

./: Makefile.am  README.md  configure.ac  main.cpp  rocm-persistenced.service
